# godot_playground_water

./: .gitignore  README.md
godot/: OtherScene.tscn  playground.gdextension  project.godot  water.gdshader  world.gdshader  world.tscn
rust/: Cargo.toml
rust/src/: lib.rs  voxel_mesh.rs  voxel_storage.rs  water_sim.rs
