[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
bit-vec = "0.6.3"
block-mesh = { git = "https://github.com/bonsairobo/block-mesh-rs", branch = "main"}
derive_more = "0.99.17"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"]}
