[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
derive_more = "0.99.17"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"]}
noise = "0.9.0"
